# CWR-CE

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CREDITS.md  Cargo.toml  METAL_PORT_PROGRESS.md  README.md  THIRD_PARTY_NOTICES.md  base-remaster-package-differences.md  build-and-run.sh  vcpkg.json
apps/cwr/Game/: CMakeLists.txt  GameApplication.cpp  Info-iOS.plist.in  PoseidonGame.entitlements  WinMain.cpp
apps/cwr/Game/Settings.bundle/: Root.plist
apps/cwr/GameDemo/: CMakeLists.txt
apps/cwr/Server/: CMakeLists.txt  ServerApplication.cpp
apps/fuzzers/Fuzzer/: CMakeLists.txt
apps/tetris/Tetris/: CMakeLists.txt
apps/tools/MetalSmokeTest/: CMakeLists.txt  main.cpp
apps/tools/Studio/: CMakeLists.txt  StudioApp.cpp  StudioConfig.cpp
apps/tools/Tools/: CMakeLists.txt  main.cpp
apps/tools/Tools/commands/: FontCommand.cpp  ImageCommand.cpp  PboCommand.cpp
engine/Poseidon/: CMakeLists.txt
engine/Poseidon/AI/: AIArcade.cpp  AICenterImpl.cpp  AICenterImplPreview.cpp  AICenterStats.cpp  AICore.hpp  AIGroup.cpp  AIGroup.hpp  AIGroupCmd.cpp  AIGroupImpl.cpp  AIRadio.cpp  AISubgroup.cpp  AIUnit.cpp  AIUnit.hpp  AIUnitImpl.cpp  ArcadeTemplate.cpp  EntityAI.hpp  MarkerArrayWithHash.cpp  MarkerArrayWithHash.hpp  VehicleAI.hpp  VehicleAICombat.cpp  VehicleAIDiag.cpp  VehicleAIPilot.cpp
engine/Poseidon/AI/Path/: ArcadeWaypoint.hpp  PathPlanner.hpp  PathSteer.cpp  PathSteer.hpp
engine/Poseidon/Audio/Voice/: VoiceBackend.cpp  VoiceBackend.hpp  VonApp.cpp  VonApp.hpp  VonBuffer.cpp  VonBuffer.hpp  VonNet.hpp  VonSpeaker.cpp  VonSpeaker.hpp
engine/Poseidon/Core/: Application.cpp  Application.hpp  DownloadDialogView.cpp  DownloadDialogView.hpp  GameDataArchive.cpp  GameDataArchive.hpp  GameDataInstall.cpp  GameDataInstall.hpp  GlobalOperators.cpp  IdString.cpp  IdString.hpp  ModCollection.cpp  ProgressSystem.cpp  Version.cpp  Version.hpp  resincl.hpp
engine/Poseidon/Core/CloudSync/: CloudSync.cpp  CloudSync.hpp  CloudSync.mm  CloudSyncPaths.cpp  CloudSyncPaths.hpp
engine/Poseidon/Core/Config/: ConfigFunctions.cpp  Configuration.cpp  UserConfig.cpp
engine/Poseidon/Core/Game/: GameLoop.cpp
engine/Poseidon/Core/Profile/: DifficultyTypes.hpp  ProfileManager.cpp  ProfileService.cpp  UserConfig.cpp  UserConfig.hpp
engine/Poseidon/Dev/Debug/: DebugOverlay.cpp  DebugOverlay.hpp
engine/Poseidon/Dev/Harness/: HarnessBuiltins.cpp
engine/Poseidon/Foundation/: platform.hpp
engine/Poseidon/Foundation/Algorithms/: RadixSort.hpp
engine/Poseidon/Foundation/Common/: FltOpts.hpp  GamePaths.cpp  GamePaths.hpp  Platform.cpp  PlatformPaths_posix.cpp  PlayerPrefs.cpp  X86IntrinsicsCompat.hpp
engine/Poseidon/Foundation/Containers/: ArrayWithHash.hpp  ConstructTraitsModern.hpp
engine/Poseidon/Foundation/Framework/: DebugLog.hpp
engine/Poseidon/Foundation/Logging/: Logging.cpp  Logging.hpp
engine/Poseidon/Foundation/Math/: Math3DK.hpp  Math3DP.cpp  MathOpt.cpp  Quatrix.hpp  V3QuadsP3.cpp
engine/Poseidon/Foundation/Memory/: JimboAllocator.cpp  MemGrow.cpp
engine/Poseidon/Foundation/Platform/: AppConfig.cpp  AppConfig.hpp  CrashHandler.cpp  InitBridge.cpp  Shutdown.cpp  StartupError.cpp  StartupError.hpp  VersionNo.h
engine/Poseidon/Foundation/Strings/: LocaleCollate.cpp  LocaleCollate.hpp
engine/Poseidon/Foundation/Threads/: PoCritical.cpp  PoSemaphore.cpp  PoSemaphore.hpp
engine/Poseidon/Foundation/Types/: Pointers.hpp
engine/Poseidon/Game/: Chat.cpp  Chat.hpp  TitEffects.cpp
engine/Poseidon/Game/Commands/: GameStateExt.cpp  GameStateExtGrp.cpp  GameStateExtObj.cpp  (+10 more)
engine/Poseidon/Graphics/: GraphicsEngineFactory.hpp
engine/Poseidon/IO/: PackFiles.cpp
engine/Poseidon/Input/: ControllerUiLayout.cpp  ControllerUiScene.cpp  ControlsCategory.cpp  GamepadState.hpp  InputDispatch.cpp  InputProcessingSdl.cpp  InputProfile.cpp  InputSubsystem.cpp  InputSubsystem.hpp  MouseState.cpp  MouseState.hpp  MouseTuning.hpp  TouchInput.cpp  TouchInput.hpp  UserAction.hpp
engine/Poseidon/Network/: MasterServerBrowser.cpp  MasterServerServiceClient.cpp  MasterServerServiceClient.hpp  MessageFactory.hpp  NetServerPeerTeardown.hpp  NetTransport.hpp  NetTransportClientVoiceInit.hpp  NetTransportMessageSend.hpp  NetTransportNet.cpp  NetTransportNetDecls.hpp  NetTransportPeerSetup.hpp  NetTransportPlayerValidation.cpp  NetTransportPlayerValidation.hpp  NetTransportPlayerValidationPolicy.hpp  NetTransportServerVoiceRouting.hpp  Network.cpp  Network.hpp  NetworkClient.cpp  NetworkClientActions.cpp  NetworkClientOnMessage.cpp  NetworkConfig.cpp  NetworkConfig.hpp  NetworkCustomAssets.hpp  NetworkFileTransfer.hpp  NetworkIface.hpp  NetworkImpl.hpp  NetworkImplClient.hpp  NetworkImplComponent.hpp  NetworkImplServer.hpp  NetworkIndices.hpp  NetworkManagerState.hpp  NetworkMessages.cpp  NetworkMessages.hpp  NetworkMisc.cpp  NetworkMissionTransfer.cpp  NetworkMissionTransfer.hpp  NetworkMsg.cpp  NetworkMsgContext.cpp  NetworkMsgFormat.hpp  NetworkObject.hpp  (+11 more)
engine/Poseidon/UI/: DisplayUI.cpp  DisplayUI.hpp  DisplayUICommon.hpp  DisplayUIMenus.cpp  DisplayUIMultiplayer.cpp  DisplayUIMultiplayerWizard.cpp  DisplayUISetup.cpp  DisplayUISetupMP.cpp  GameDataDownloadSupport.hpp  MainMenuLayout.cpp  MainMenuLayout.hpp  OptionsUI.cpp  OptionsUI.hpp  OptionsUIApp.cpp  OptionsUICommon.hpp  OptionsUIImpl.cpp  UITestEngine.cpp  UITestEngine.hpp
engine/Poseidon/World/: Viewer.cpp  World.cpp  World.hpp  WorldChatInput.hpp  WorldImpl.cpp
engine/PoseidonFormats/: CMakeLists.txt
engine/PoseidonMTL/: CMakeLists.txt  DebugOverlayMetal.hpp  DebugOverlayMetal.mm  EngineMTL.cpp  EngineMTL.hpp  EngineMTLBootstrap.cpp  EngineMTLBootstrap.hpp  GraphicsBackendMTL.cpp  MetalCppImpl.cpp  TextBankMTL.cpp  TextBankMTL.hpp  TextureMTL.cpp  TextureMTL.hpp  VertexBufferMTL.cpp  VertexBufferMTL.hpp
engine/PoseidonOpenAL/: CMakeLists.txt  IosAudioSession.cpp  IosAudioSession.hpp  OpenALRuntime.hpp  SoundSystemOAL.cpp  SoundSystemOAL.hpp  WaveOAL.cpp  WaveOAL.hpp
engine/PoseidonOpenAL/Voice/: VoNSpeakerOpenAL.hpp
engine/Trident/: Cargo.toml
engine/Trident/src/: main.rs
(+638 files in other folders)
